# microbit_bmlite

./: .gitignore  Cargo.toml  install.sh  readme.md
release/: microbitbmlite.hex
schematic/: Connection.fzz
src/: bitmaps.rs  led.rs  lib.rs  main.rs
