[package]
authors = ["Fredrik Simonsson simson@thesimson.net"]
categories = [
    "hardware-support",
    "embedded",
    "no-std",
]
license = "0BSD"
name = "microbit"
readme = "README.md"
repository = "https://github.com/simonsso/hellomicrobit"
version = "0.6.3"

[dependencies]
alloc-cortex-m = "0.3.5"
cortex-m-rt = "0.6.5"
nb = "0.1.1"
# cortex-m-semihosting = "0.3.1"
numtoa = "0.2.3"
dcf77 = "0.1.0"
mag3110 = "0.1.4"
panic-halt = "0.2.0"
embedded-hal = "0.2.2"

[dependencies.nrf51-hal]
git = "https://github.com/simonsso/nrf51-hal.git"
branch = "spidev"

[dependencies.cortex-m]
version = "0.5.8"
default-features = false
features = ["inline-asm"]

# cortex-m = "0.5.8"

[dependencies.bmlite]
git = "https://github.com/simonsso/lite.git"
default-features = false

[dev-dependencies.rand]
default-features = false
version = "0.5.5"

[profile.dev]
debug = true
codegen-units = 1

[profile.release]
debug = true
lto = true
opt-level = "s"
